--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -267,7 +267,7 @@ plugins_js  = []
 ## Marketing
 ############################
 [marketing]
-  google_analytics = ""
+  google_analytics = "G-TKST8K21RE"
   google_tag_manager = ""
 
 ############################
