--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,7 +10,7 @@ title = "Max's Water Blog"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://modest-goodall-49d167.netlify.app/"
+baseurl = "https://www.maximfortin.com/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
